--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<title>TOAST CLICKER</title>
-
-<style>
+<head>
+  <title>🍞BREAD CLICKER🍞</title>
+  <meta charset="UTF-8">
+  <meta name="FUSION" content="Game">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="description" content="A website created to make a game">
+<!-----------------------CSS------------------->
+  <style>
+    
+  </style>
+<!-----------------------JS FUNCTIONS--------------------->
+  <script>
+    function breadClicked() {
+      crumbs += cpc;
+    }
+  </script>
+<!------------–---------JS VARIABLES---------------------->
+  <script>
+    let crumbs = 0
+    let cpc = 1
+  </script>
+</head>
+<!----------------------CODE------------------------------------>
+<body>
   
-</style>
-<!---------------------------------------------JS------------------------->
-<script>
-  // Variables
-  var toast = 0
-</script>
+</body>
