--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 </head>
 <!----------------------CODE------------------------------------>
 <body>
-  
+  <img class="bread" src="ASSETS/IMG_2015-removebg-preview.png">
 </body>
