--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="description" content="A website created to make a game">
 <!-----------------------CSS------------------->
   <style>
-    
+    .bread {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   </style>
 <!-----------------------JS FUNCTIONS--------------------->
   <script>
