--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-----------------------JS FUNCTIONS--------------------->
   <script>
     function breadClicked() {
-      crumbs += cpc;
+     let crumbs += let cpc;
       updateDisplay();
     }
    updateDisplay(); // Initial display
