--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <body>
   <p class="counter" id="variable-value" style="font-family: Rockwell; text-align: center;"></p>
   <div>
-    
+    <img onclick="breadClicked()" class="bread" src="ASSETS/IMG_2015-removebg-preview.png">
   </div>
 </body>
