--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     }
   </style>
 <!-----------------------JS FUNCTIONS--------------------->
+  
   <script>
+    updateDisplay()
     function updateDisplay() {
   const displayElement = document.getElementById("variable-value");
   displayElement.textContent = crumbs;
